Update startup.sh